--- a/src/App.css
+++ b/src/App.css
@@ -304,3 +304,39 @@ p {
   padding: 12px;
   margin: 20px;
 }
+
+.customerDetails h4 {
+  font-size: 15px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 20px 40px;
+}
+
+.leadDetails {
+  margin: 20px 40px;
+  background: #ffffff;
+  border: 1px solid #2b383e54;
+  border-radius: 15px;
+  padding: 30px;
+  display: flex;
+}
+
+.leadDetails img {
+  height: 200px;
+  margin-right: 50px;
+}
+
+.leadDetails h3 {
+  font-size: 40px;
+  margin: 0px;
+}
+.leadDetails h4 {
+  font-size: 16px;
+  margin: 0px;
+  padding: 0px;
+  margin-top: -5px;
+  opacity: 0.75;
+}
+.details{
+  width:100%
+}
